-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 19, repo-loom
-
Component/s: hotspot
-
b26
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8288801 | 17.0.5-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8289636 | 17.0.5 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (src/hotspot/share/opto/loopopts.cpp:1598), pid=28136, tid=28855
# assert(!n->is_Store() && !n->is_LoadStore()) failed: no node with a side effect
#
# JRE version: Java(TM) SE Runtime Environment (19.0) (fastdebug build 19-internal-2022-05-12-0621265.alan.bateman.loom-merge)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 19-internal-2022-05-12-0621265.alan.bateman.loom-merge, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x149471c] PhaseIdealLoop::try_sink_out_of_loop(Node*)+0xa1c
Note that the test fails with randomization on (-XX:+StressLCM -XX:+StressGCM -XX:+StressIGVN -XX:+StressCCP).
If it fails in the loom repo then it is likely that it fails in the main line too, when run with --enable-preview.
Executed CTW for all 3254 classes in modules:java.base(at /opt/mach5/mesos/work_dir/jib-master/install/2022-05-12-0621265.alan.bateman.loom-merge/linux-x64-debug.jdk/jdk-19/fastdebug/lib/modules)
----------System.err:(21/1342)----------
There were 1 errors:[
java.lang.Error: modules_java_base_3254: failed during compilation of class #4520 : sun/net/util/IPAddressUtil
at sun.hotspot.tools.ctw.CtwRunner.startCtwforAllClasses(CtwRunner.java:215)
at sun.hotspot.tools.ctw.CtwRunner.run(CtwRunner.java:119)
at sun.hotspot.tools.ctw.CtwRunner.main(CtwRunner.java:65)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:578)
at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:312)
at java.base/java.lang.Thread.run(Thread.java:1585)
java.lang.AssertionError: There were 1 errors:[{modules_java_base_3254: failed during compilation of class #4520 : sun/net/util/IPAddressUtil}]
at sun.hotspot.tools.ctw.CtwRunner.run(CtwRunner.java:134)
at sun.hotspot.tools.ctw.CtwRunner.main(CtwRunner.java:65)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:578)
at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:312)
at java.base/java.lang.Thread.run(Thread.java:1585)
JavaTest Message: Test threw exception: java.lang.AssertionError
JavaTest Message: shutting down test
- backported by
-
JDK-8288801 C2 fails with assert(!n->is_Store() && !n->is_LoadStore()) failed: no node with a side effect
-
- Resolved
-
-
JDK-8289636 C2 fails with assert(!n->is_Store() && !n->is_LoadStore()) failed: no node with a side effect
-
- Resolved
-
- relates to
-
JDK-8288000 compiler/loopopts/TestOverUnrolling2.java fails with release VMs
-
- Resolved
-
-
JDK-8269088 C2 fails with assert(!n->is_Store() && !n->is_LoadStore()) failed: no node with a side effect
-
- Closed
-
-
JDK-8252372 Check if cloning is required to move loads out of loops in PhaseIdealLoop::split_if_with_blocks_post()
-
- Resolved
-
-
JDK-8303466 C2: failed: malformed control flow. Limit type made precise with MaxL/MinL
-
- Resolved
-
-
JDK-8289127 Apache Lucene triggers: DEBUG MESSAGE: duplicated predicate failed which is impossible
-
- Closed
-
-
JDK-8294967 C2 fails with assert(!n->is_Store() && !n->is_LoadStore()) failed: no node with a side effect
-
- Closed
-
- links to
-
Commit
openjdk/jdk17u-dev/f73037d9
-
Commit
openjdk/jdk/590337e2
-
Review
openjdk/jdk17u-dev/514
-
Review
openjdk/jdk/8996