8286625: C2 fails with assert(!n->is_Store() && !n->is_LoadStore()) failed: no node with a side effect

Backport-of: 590337e2f229445e353e7c32e0dcff8d93e412d2